--- a/acounts.html
+++ b/acounts.html
@@ -10,17 +10,17 @@
 <body>
     <div class="header">
         <div id="nav-bar-logo">
-            <a href="/index.html"><img src="/images/logo.png" alt="Logo"></a>
+            <a href="./index.html"><img src="images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-bar">
             <div id="nav-bar-links">
                 <ul>
-                    <li><a href="/acounts.html">ACCOUNTS</a></li>
-                    <li><a href="/product.html">PRODUCTS</a></li>
+                    <li><a href="./acounts.html">ACCOUNTS</a></li>
+                    <li><a href="./product.html">PRODUCTS</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">SALE</a></li>
-                    <li><a href="/cart.html">CART</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="./cart.html">CART</a></li>
+                    <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <div id="nav-bar-btn">
@@ -42,7 +42,7 @@
     </form>
     </div>
     <div id="acount-home-image">
-    <img src="/images/accounts-photo.png" alt="image">
+    <img src="images/accounts-photo.png" alt="image">
     </div>
     </div>
 
@@ -81,9 +81,9 @@
             
             <div id="socail-media-links">
                 <div id="mdia-links">
-                    <a href="#"><img src="/images/icon-facebook.svg" alt="facebook"></a>
-                    <a href="#"><img src="/images/icon-twitter.svg" alt="twitter"></a>
-                    <a href="#"><img src="/images/icon-instagram.svg" alt="instagram"></a>
+                    <a href="#"><img src="images/icon-facebook.svg" alt="facebook"></a>
+                    <a href="#"><img src="images/icon-twitter.svg" alt="twitter"></a>
+                    <a href="#"><img src="images/icon-instagram.svg" alt="instagram"></a>
                 </div>
                 <p>Aquaplants.com</p>
             </div>    
