--- a/cart.html
+++ b/cart.html
@@ -10,17 +10,17 @@
 <body>
     <div class="header">
         <div id="nav-bar-logo">
-            <a href="/index.html"><img src="/images/logo.png" alt="Logo"></a>
+            <a href="./index.html"><img src="images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-bar">
             <div id="nav-bar-links">
                 <ul>
-                    <li><a href="/acounts.html">ACCOUNTS</a></li>
-                    <li><a href="/product.html">PRODUCTS</a></li>
+                    <li><a href="./acounts.html">ACCOUNTS</a></li>
+                    <li><a href="./product.html">PRODUCTS</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">SALE</a></li>
-                    <li><a href="/cart.html">CART</a></li>
-                    <li><a href="/contact.html">CONTACT</a></li>
+                    <li><a href="./cart.html">CART</a></li>
+                    <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <div id="nav-bar-btn">
@@ -35,7 +35,7 @@
         <p>Shoping Cards Summary</p>
         <div class="card">
             <div id="card-image">
-                <img src="/images/plant1.png" alt="img">
+                <img src="images/plant1.png" alt="img">
                 <div id="image-text">
                     <p>Title</p>
                     <p>$39.99</p>
@@ -54,7 +54,7 @@
         </div>
         <div class="card">
             <div id="card-image">
-                <img src="/images/plant2.png" alt="img">
+                <img src="images/plant2.png" alt="img">
                 <div id="image-text">
                     <p>Title</p>
                     <p>$39.99</p>
@@ -73,7 +73,7 @@
         </div>
         <div class="card">
             <div id="card-image">
-                <img src="/images/plant3.png" alt="img">
+                <img src="images/plant3.png" alt="img">
                 <div id="image-text">
                     <p>Title</p>
                     <p>$39.99</p>
@@ -92,7 +92,7 @@
         </div>
         <div class="card">
             <div id="card-image">
-                <img src="/images/plant4.png" alt="img">
+                <img src="images/plant4.png" alt="img">
                 <div id="image-text">
                     <p>Title</p>
                     <p>$39.99</p>
@@ -149,9 +149,9 @@
             
             <div id="socail-media-links">
                 <div id="mdia-links">
-                    <a href="#"><img src="/images/icon-facebook.svg" alt="facebook"></a>
-                    <a href="#"><img src="/images/icon-twitter.svg" alt="twitter"></a>
-                    <a href="#"><img src="/images/icon-instagram.svg" alt="instagram"></a>
+                    <a href="#"><img src="images/icon-facebook.svg" alt="facebook"></a>
+                    <a href="#"><img src="images/icon-twitter.svg" alt="twitter"></a>
+                    <a href="#"><img src="images/icon-instagram.svg" alt="instagram"></a>
                 </div>
                 <p>Aquaplants.com</p>
             </div>    
